# Eighteenot-AI-Assistant

./: .dockerignore  .gitignore  Dockerfile  app.py  chatbot.py  data_fetcher.py  main.py  pyproject.toml  requirements.txt  vector_store.py
.github/workflows/: ci.yml
data/: kohli_document.txt
data/kohli_vectorstore/: index.faiss  index.pkl
