[project]
name = "eighteenot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "faiss-cpu>=1.14.3",
    "fastapi>=0.137.0",
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-faiss>=0.1.1",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-tavily>=0.2.18",
    "langchain-text-splitters>=1.1.2",
    "langsmith>=0.8.15",
    "lxml>=6.1.1",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sentence-transformers>=5.5.1",
    "streamlit>=1.58.0",
    "tavily-python>=0.7.26",
    "tiktoken>=0.13.0",
    "torchvision>=0.27.0",
    "uvicorn>=0.49.0",
    "wikipedia>=1.4.0",
]
